# template-rust-cli

./: Cargo.toml
src/: cli.rs  main.rs
