[package]
name = "template-rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["string", "env"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.107"

[dev-dependencies]
tempfile = "3.8.1"
